openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/iconUrl: img/icons/camel.svg
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      expose: "true"
      provider: fabric8
      project: statefulset-service
      version: 1.0-SNAPSHOT
      group: com.example
    name: statefulset-service
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      project: statefulset-service
      provider: fabric8
      group: com.example
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      expose: "true"
      provider: fabric8
      project: statefulset-service
      version: 1.0-SNAPSHOT
      group: com.example
    name: statefulset-service
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: statefulset-service
- apiVersion: apps/v1beta1
  kind: StatefulSet
  metadata:
    annotations:
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=statefulset-service&var-version=1.0-SNAPSHOT
    labels:
      provider: fabric8
      project: statefulset-service
      version: 1.0-SNAPSHOT
      group: com.example
    name: statefulset-service
  spec:
    replicas: 1
    selector:
      matchLabels:
        project: statefulset-service
        provider: fabric8
        group: com.example
    serviceName: statefulset-service
    template:
      metadata:
        labels:
          provider: fabric8
          project: statefulset-service
          version: 1.0-SNAPSHOT
          group: com.example
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: example/statefulset-service:snapshot-170525-111924-0249
          imagePullPolicy: IfNotPresent
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          securityContext:
            privileged: false
